[package]
name = "openpulse-kiss"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openpulse-kisstnc"
path = "src/main.rs"

[package.metadata.deb]
name = "openpulse-kisstnc"
maintainer = "OpenPulse Contributors"
copyright = "2025 OpenPulse Contributors"
license-file = ["../../LICENSE", "4"]
extended-description = "OpenPulseHF KISS/AX.25 TNC for digital mode operation"
depends = "$auto"
section = "hamradio"
priority = "optional"

[features]
# Enable real CPAL audio hardware support in the TNC binary.
cpal = ["openpulse-audio/cpal-backend"]

[dependencies]
openpulse-core.workspace = true
openpulse-audio.workspace = true
openpulse-modem.workspace = true
openpulse-radio.workspace = true
openpulse-config.workspace = true
bpsk-plugin.workspace = true
fsk4-plugin.workspace = true
psk8-plugin.workspace = true
qpsk-plugin.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dev-dependencies]
tokio.workspace = true
