[package]
name = "openpulse-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openpulse-mesh"
path = "src/main.rs"

[features]
cpal = ["openpulse-audio/cpal-backend"]

[dependencies]
openpulse-core.workspace = true
openpulse-audio.workspace = true
openpulse-modem.workspace = true
openpulse-config.workspace = true
bpsk-plugin.workspace = true
fsk4-plugin.workspace = true
psk8-plugin.workspace = true
qpsk-plugin.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
