[package]
name        = "openpulse-modem"
description = "Modem engine for OpenPulse – wires plugins and audio backends together"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
openpulse-core    = { workspace = true }
openpulse-audio   = { workspace = true }
openpulse-channel = { workspace = true }
bpsk-plugin       = { workspace = true }
tracing           = { workspace = true }
rand              = { workspace = true }
rustfft           = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_json        = { workspace = true }
tokio             = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
qpsk-plugin = { workspace = true }
psk8-plugin = { workspace = true }
fsk4-plugin = { workspace = true }
scfdma-plugin = { workspace = true }
