[package]
name = "openpulse-qsy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "QSY frequency-agility protocol for OpenPulseHF: frame codec, state machine, and rig scanner"

[dependencies]
openpulse-radio = { path = "../../crates/openpulse-radio" }
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.22"

[dev-dependencies]
rand.workspace = true
