[package]
name = "openpulse-radio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PTT controller trait and backends for OpenPulseHF (serial RTS/DTR, VOX, rigctld)"

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
serialport = { version = "4.7", optional = true }

[features]
default = []
serial = ["dep:serialport"]
