[package]
name = "openpulse-tui"
description = "OpenPulse TUI frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "openpulse-tui"
path = "src/main.rs"

[features]
cpal-backend = ["openpulse-audio/cpal-backend"]

[dependencies]
openpulse-modem  = { workspace = true }
openpulse-core   = { workspace = true }
openpulse-audio  = { workspace = true, default-features = false }
bpsk-plugin      = { workspace = true }
fsk4-plugin      = { workspace = true }
qpsk-plugin      = { workspace = true }
psk8-plugin      = { workspace = true }
ratatui          = { workspace = true }
crossterm        = { workspace = true }
clap             = { workspace = true }
tokio            = { workspace = true }
serde_json       = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
