[package]
name        = "qam64-plugin"
description = "64QAM modulation/demodulation plugin for OpenPulse"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
openpulse-core = { workspace = true }
openpulse-dsp  = { workspace = true }
